@@ -6,6 +6,7 @@
 - Pets gain xp and level up.
 - Pets can drink 'medicine' even when they aren't hungry. Note: They still only heal for a base amount.
 - New bag item backpack. Still missing the porting and questing steps.
+- Fire, Ice, and Light arrows now defined in ammunition.xml ready to be quest rewards.
 
 *fixes*
 - Help For the Harvest quest should work again.
